--- a/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/UI/TimKiemThongKe/TimKiem.xaml
+++ b/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/UI/TimKiemThongKe/TimKiem.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="QuanLyHoiNguoiCaoTuoi.UI.TimKiemThogKe.TimKiem"
+﻿<Window x:Class="QuanLyHoiNguoiCaoTuoi.UI.TimKiemThongKe.TimKiem"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:QuanLyHoiNguoiCaoTuoi.UI.TimKiemThogKe"
+        xmlns:local="clr-namespace:QuanLyHoiNguoiCaoTuoi.UI.TimKiemThongKe"
         xmlns:DATA="clr-namespace:QuanLyHoiNguoiCaoTuoi.DATA"
         mc:Ignorable="d"
          Title="Tìm kiếm" Height="520" Width="700" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
